--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 <style> 
     body {
         font-family: Arial, sans-serif;
-        background-image: url("{{ url_for('static', filename='images/home.jpg') }}");
+        background-image: url("{{ url_for('static', filename='images/home.png') }}");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
